# gen/go/admin/admin.swagger.json
@@ -1063,6 +1063,9 @@
       "properties": {
         "name": {
           "type": "string"
+        },
+        "siteLink": {
+          "type": "string"
         }
       }
     },
@@ -1189,6 +1192,9 @@
         "doctorsCount": {
           "type": "string",
           "format": "int64"
+        },
+        "siteLink": {
+          "type": "string"
         }
       }
     },
@@ -1220,6 +1226,9 @@
       "type": "object",
       "properties": {
         "name": {
+          "type": "string"
+        },
+        "siteLink": {
           "type": "string"
         }
       }
