# internal/app/api/admin/v1/update_course.go
@@ -7,6 +7,6 @@ import (
 )
 
 func (s *Service) UpdateCourse(ctx context.Context, req *adminpb.UpdateCourseRequest) (*adminpb.UpdateCourseResponse, error) {
-	v, err := s.module.Actions.UpdateCourse.Execute(ctx, req.GetId(), req.Name)
+	v, err := s.module.Actions.UpdateCourse.Execute(ctx, req.GetId(), req.Name, req.SiteLink)
 	return &adminpb.UpdateCourseResponse{Course: course(v)}, rpcError(err)
 }
